--- a/HotdAmn/Interface/Preferences/PrefsUsers.xib
+++ b/HotdAmn/Interface/Preferences/PrefsUsers.xib
@@ -60,20 +60,20 @@
 						<string key="NSFrame">{{13, 10}, {402, 253}}</string>
 						<reference key="NSSuperview" ref="437716314"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="723364279"/>
+						<reference key="NSNextKeyView" ref="860823588"/>
 						<string key="NSReuseIdentifierKey">_NS:461</string>
 						<object class="NSMutableArray" key="NSTabViewItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="NSTabViewItem" id="99429700">
 								<string key="NSIdentifier">1</string>
 								<object class="NSView" key="NSView" id="723364279">
-									<reference key="NSNextResponder" ref="1061572892"/>
+									<nil key="NSNextResponder"/>
 									<int key="NSvFlags">256</int>
 									<object class="NSMutableArray" key="NSSubviews">
 										<bool key="EncodedWithXMLCoder">YES</bool>
 										<object class="NSScrollView" id="456114306">
 											<reference key="NSNextResponder" ref="723364279"/>
-											<int key="NSvFlags">268</int>
+											<int key="NSvFlags">4364</int>
 											<object class="NSMutableArray" key="NSSubviews">
 												<bool key="EncodedWithXMLCoder">YES</bool>
 												<object class="NSClipView" id="659604636">
@@ -83,10 +83,9 @@
 														<bool key="EncodedWithXMLCoder">YES</bool>
 														<object class="NSTableView" id="846290331">
 															<reference key="NSNextResponder" ref="659604636"/>
-															<int key="NSvFlags">256</int>
+															<int key="NSvFlags">4352</int>
 															<string key="NSFrameSize">{346, 133}</string>
 															<reference key="NSSuperview" ref="659604636"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="33470432"/>
 															<string key="NSReuseIdentifierKey">_NS:1197</string>
 															<bool key="NSEnabled">YES</bool>
@@ -223,7 +222,6 @@
 													</object>
 													<string key="NSFrame">{{1, 1}, {346, 133}}</string>
 													<reference key="NSSuperview" ref="456114306"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="846290331"/>
 													<string key="NSReuseIdentifierKey">_NS:1195</string>
 													<reference key="NSDocView" ref="846290331"/>
@@ -235,7 +233,6 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 													<reference key="NSSuperview" ref="456114306"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="367794474"/>
 													<string key="NSReuseIdentifierKey">_NS:1214</string>
 													<reference key="NSTarget" ref="456114306"/>
@@ -247,7 +244,6 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 119}, {346, 15}}</string>
 													<reference key="NSSuperview" ref="456114306"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="823410735"/>
 													<string key="NSReuseIdentifierKey">_NS:1216</string>
 													<int key="NSsFlags">1</int>
@@ -258,7 +254,6 @@
 											</object>
 											<string key="NSFrame">{{17, 42}, {348, 135}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="659604636"/>
 											<string key="NSReuseIdentifierKey">_NS:1193</string>
 											<int key="NSsFlags">133682</int>
@@ -272,7 +267,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{14, 185}, {321, 17}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="456114306"/>
 											<string key="NSReuseIdentifierKey">_NS:3936</string>
 											<bool key="NSEnabled">YES</bool>
@@ -297,7 +291,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{17, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="848324219"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
@@ -325,7 +318,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{52, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
-											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView" ref="288603235"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="43098979">
@@ -347,10 +340,30 @@
 												<int key="NSPeriodicInterval">75</int>
 											</object>
 										</object>
+										<object class="NSButton" id="288603235">
+											<reference key="NSNextResponder" ref="723364279"/>
+											<int key="NSvFlags">268</int>
+											<string key="NSFrame">{{308, 10}, {63, 32}}</string>
+											<reference key="NSSuperview" ref="723364279"/>
+											<string key="NSReuseIdentifierKey">_NS:161</string>
+											<bool key="NSEnabled">YES</bool>
+											<object class="NSButtonCell" key="NSCell" id="292638769">
+												<int key="NSCellFlags">67239424</int>
+												<int key="NSCellFlags2">134217728</int>
+												<string key="NSContents">Use</string>
+												<reference key="NSSupport" ref="169077990"/>
+												<string key="NSCellIdentifier">_NS:161</string>
+												<reference key="NSControlView" ref="288603235"/>
+												<int key="NSButtonFlags">-2038284033</int>
+												<int key="NSButtonFlags2">129</int>
+												<string key="NSAlternateContents"/>
+												<string key="NSKeyEquivalent"/>
+												<int key="NSPeriodicDelay">200</int>
+												<int key="NSPeriodicInterval">25</int>
+											</object>
+										</object>
 									</object>
 									<string key="NSFrame">{{10, 33}, {382, 207}}</string>
-									<reference key="NSSuperview" ref="1061572892"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="830779526"/>
 									<string key="NSReuseIdentifierKey">_NS:463</string>
 								</object>
@@ -367,7 +380,7 @@
 										<bool key="EncodedWithXMLCoder">YES</bool>
 										<object class="NSScrollView" id="654083506">
 											<reference key="NSNextResponder" ref="991546264"/>
-											<int key="NSvFlags">268</int>
+											<int key="NSvFlags">4364</int>
 											<object class="NSMutableArray" key="NSSubviews">
 												<bool key="EncodedWithXMLCoder">YES</bool>
 												<object class="NSClipView" id="1061456974">
@@ -377,7 +390,7 @@
 														<bool key="EncodedWithXMLCoder">YES</bool>
 														<object class="NSTableView" id="864860100">
 															<reference key="NSNextResponder" ref="1061456974"/>
-															<int key="NSvFlags">256</int>
+															<int key="NSvFlags">4352</int>
 															<string key="NSFrameSize">{346, 133}</string>
 															<reference key="NSSuperview" ref="1061456974"/>
 															<reference key="NSNextKeyView" ref="437060702"/>
@@ -557,13 +570,13 @@
 							</object>
 							<object class="NSTabViewItem" id="632028138">
 								<object class="NSView" key="NSView" id="860823588">
-									<nil key="NSNextResponder"/>
+									<reference key="NSNextResponder" ref="1061572892"/>
 									<int key="NSvFlags">256</int>
 									<object class="NSMutableArray" key="NSSubviews">
 										<bool key="EncodedWithXMLCoder">YES</bool>
 										<object class="NSScrollView" id="658883870">
 											<reference key="NSNextResponder" ref="860823588"/>
-											<int key="NSvFlags">268</int>
+											<int key="NSvFlags">4364</int>
 											<object class="NSMutableArray" key="NSSubviews">
 												<bool key="EncodedWithXMLCoder">YES</bool>
 												<object class="NSClipView" id="812601610">
@@ -573,9 +586,10 @@
 														<bool key="EncodedWithXMLCoder">YES</bool>
 														<object class="NSTableView" id="382481933">
 															<reference key="NSNextResponder" ref="812601610"/>
-															<int key="NSvFlags">256</int>
+															<int key="NSvFlags">4352</int>
 															<string key="NSFrameSize">{346, 133}</string>
 															<reference key="NSSuperview" ref="812601610"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="367522340"/>
 															<string key="NSReuseIdentifierKey">_NS:1197</string>
 															<bool key="NSEnabled">YES</bool>
@@ -635,6 +649,7 @@
 													</object>
 													<string key="NSFrame">{{1, 1}, {346, 133}}</string>
 													<reference key="NSSuperview" ref="658883870"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="382481933"/>
 													<string key="NSReuseIdentifierKey">_NS:1195</string>
 													<reference key="NSDocView" ref="382481933"/>
@@ -646,6 +661,7 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 													<reference key="NSSuperview" ref="658883870"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="280168574"/>
 													<string key="NSReuseIdentifierKey">_NS:1214</string>
 													<reference key="NSTarget" ref="658883870"/>
@@ -657,6 +673,7 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 													<reference key="NSSuperview" ref="658883870"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="598558705"/>
 													<string key="NSReuseIdentifierKey">_NS:1216</string>
 													<int key="NSsFlags">1</int>
@@ -667,6 +684,7 @@
 											</object>
 											<string key="NSFrame">{{17, 42}, {348, 135}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="812601610"/>
 											<string key="NSReuseIdentifierKey">_NS:1193</string>
 											<int key="NSsFlags">133682</int>
@@ -680,6 +698,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{14, 185}, {297, 17}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="658883870"/>
 											<string key="NSReuseIdentifierKey">_NS:3936</string>
 											<bool key="NSEnabled">YES</bool>
@@ -699,6 +718,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{17, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="939772210"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
@@ -723,6 +743,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{52, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="1061572892"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
@@ -744,6 +765,8 @@
 										</object>
 									</object>
 									<string key="NSFrame">{{10, 33}, {382, 207}}</string>
+									<reference key="NSSuperview" ref="1061572892"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="838595240"/>
 								</object>
 								<string key="NSLabel">Ignore List</string>
@@ -751,14 +774,14 @@
 								<reference key="NSTabView" ref="1061572892"/>
 							</object>
 						</object>
-						<reference key="NSSelectedTabViewItem" ref="99429700"/>
+						<reference key="NSSelectedTabViewItem" ref="632028138"/>
 						<reference key="NSFont" ref="169077990"/>
 						<int key="NSTvFlags">0</int>
 						<bool key="NSAllowTruncatedLabels">YES</bool>
 						<bool key="NSDrawsBackground">YES</bool>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="723364279"/>
+							<reference ref="860823588"/>
 						</object>
 					</object>
 				</object>
@@ -924,6 +947,22 @@
 					</object>
 					<int key="connectionID">146</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">accountUseButton</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="288603235"/>
+					</object>
+					<int key="connectionID">154</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">useAccount:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="288603235"/>
+					</object>
+					<int key="connectionID">155</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1011,6 +1050,7 @@
 							<reference ref="823410735"/>
 							<reference ref="848324219"/>
 							<reference ref="830779526"/>
+							<reference ref="288603235"/>
 						</object>
 						<reference key="parent" ref="99429700"/>
 					</object>
@@ -1308,6 +1348,20 @@
 						<reference key="object" ref="425238728"/>
 						<reference key="parent" ref="288767379"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">152</int>
+						<reference key="object" ref="288603235"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="292638769"/>
+						</object>
+						<reference key="parent" ref="723364279"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">153</int>
+						<reference key="object" ref="292638769"/>
+						<reference key="parent" ref="288603235"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1344,6 +1398,8 @@
 					<string>149.IBPluginDependency</string>
 					<string>150.IBPluginDependency</string>
 					<string>151.IBPluginDependency</string>
+					<string>152.IBPluginDependency</string>
+					<string>153.IBPluginDependency</string>
 					<string>50.IBPluginDependency</string>
 					<string>51.IBPluginDependency</string>
 					<string>52.IBPluginDependency</string>
@@ -1415,6 +1471,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -1429,7 +1487,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">151</int>
+			<int key="maxID">155</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1447,9 +1505,11 @@
 							<string>removeAccount:</string>
 							<string>removeBuddy:</string>
 							<string>removeIgnore:</string>
+							<string>useAccount:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1468,6 +1528,7 @@
 							<string>removeAccount:</string>
 							<string>removeBuddy:</string>
 							<string>removeIgnore:</string>
+							<string>useAccount:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1495,6 +1556,10 @@
 								<string key="name">removeIgnore:</string>
 								<string key="candidateClassName">id</string>
 							</object>
+							<object class="IBActionInfo">
+								<string key="name">useAccount:</string>
+								<string key="candidateClassName">id</string>
+							</object>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
@@ -1503,6 +1568,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>accountList</string>
 							<string>accountRemoveButton</string>
+							<string>accountUseButton</string>
 							<string>buddyList</string>
 							<string>buddyRemoveButton</string>
 							<string>ignoreList</string>
@@ -1511,6 +1577,7 @@
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>NSTableView</string>
+							<string>NSButton</string>
 							<string>NSButton</string>
 							<string>NSTableView</string>
 							<string>NSButton</string>
@@ -1524,6 +1591,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>accountList</string>
 							<string>accountRemoveButton</string>
+							<string>accountUseButton</string>
 							<string>buddyList</string>
 							<string>buddyRemoveButton</string>
 							<string>ignoreList</string>
@@ -1537,6 +1605,10 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">accountRemoveButton</string>
+								<string key="candidateClassName">NSButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">accountUseButton</string>
 								<string key="candidateClassName">NSButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
