--- a/HotdAmn/Interface/Preferences/PrefsUsers.xib
+++ b/HotdAmn/Interface/Preferences/PrefsUsers.xib
@@ -60,14 +60,14 @@
 						<string key="NSFrame">{{13, 10}, {402, 253}}</string>
 						<reference key="NSSuperview" ref="437716314"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="860823588"/>
+						<reference key="NSNextKeyView" ref="723364279"/>
 						<string key="NSReuseIdentifierKey">_NS:461</string>
 						<object class="NSMutableArray" key="NSTabViewItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="NSTabViewItem" id="99429700">
 								<string key="NSIdentifier">1</string>
 								<object class="NSView" key="NSView" id="723364279">
-									<nil key="NSNextResponder"/>
+									<reference key="NSNextResponder" ref="1061572892"/>
 									<int key="NSvFlags">256</int>
 									<object class="NSMutableArray" key="NSSubviews">
 										<bool key="EncodedWithXMLCoder">YES</bool>
@@ -86,6 +86,7 @@
 															<int key="NSvFlags">4352</int>
 															<string key="NSFrameSize">{346, 133}</string>
 															<reference key="NSSuperview" ref="659604636"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="33470432"/>
 															<string key="NSReuseIdentifierKey">_NS:1197</string>
 															<bool key="NSEnabled">YES</bool>
@@ -222,6 +223,7 @@
 													</object>
 													<string key="NSFrame">{{1, 1}, {346, 133}}</string>
 													<reference key="NSSuperview" ref="456114306"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="846290331"/>
 													<string key="NSReuseIdentifierKey">_NS:1195</string>
 													<reference key="NSDocView" ref="846290331"/>
@@ -233,6 +235,7 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 													<reference key="NSSuperview" ref="456114306"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="367794474"/>
 													<string key="NSReuseIdentifierKey">_NS:1214</string>
 													<reference key="NSTarget" ref="456114306"/>
@@ -244,6 +247,7 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 119}, {346, 15}}</string>
 													<reference key="NSSuperview" ref="456114306"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="823410735"/>
 													<string key="NSReuseIdentifierKey">_NS:1216</string>
 													<int key="NSsFlags">1</int>
@@ -254,6 +258,7 @@
 											</object>
 											<string key="NSFrame">{{17, 42}, {348, 135}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="659604636"/>
 											<string key="NSReuseIdentifierKey">_NS:1193</string>
 											<int key="NSsFlags">133682</int>
@@ -267,6 +272,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{14, 185}, {321, 17}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="456114306"/>
 											<string key="NSReuseIdentifierKey">_NS:3936</string>
 											<bool key="NSEnabled">YES</bool>
@@ -291,6 +297,7 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{17, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="848324219"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
@@ -318,7 +325,8 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{52, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
-											<reference key="NSNextKeyView" ref="288603235"/>
+											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView" ref="826891380"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="43098979">
@@ -340,20 +348,22 @@
 												<int key="NSPeriodicInterval">75</int>
 											</object>
 										</object>
-										<object class="NSButton" id="288603235">
+										<object class="NSButton" id="826891380">
 											<reference key="NSNextResponder" ref="723364279"/>
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{308, 10}, {63, 32}}</string>
 											<reference key="NSSuperview" ref="723364279"/>
+											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView" ref="1061572892"/>
 											<string key="NSReuseIdentifierKey">_NS:161</string>
 											<bool key="NSEnabled">YES</bool>
-											<object class="NSButtonCell" key="NSCell" id="292638769">
+											<object class="NSButtonCell" key="NSCell" id="481800347">
 												<int key="NSCellFlags">67239424</int>
 												<int key="NSCellFlags2">134217728</int>
 												<string key="NSContents">Use</string>
 												<reference key="NSSupport" ref="169077990"/>
 												<string key="NSCellIdentifier">_NS:161</string>
-												<reference key="NSControlView" ref="288603235"/>
+												<reference key="NSControlView" ref="826891380"/>
 												<int key="NSButtonFlags">-2038284033</int>
 												<int key="NSButtonFlags2">129</int>
 												<string key="NSAlternateContents"/>
@@ -364,6 +374,8 @@
 										</object>
 									</object>
 									<string key="NSFrame">{{10, 33}, {382, 207}}</string>
+									<reference key="NSSuperview" ref="1061572892"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="830779526"/>
 									<string key="NSReuseIdentifierKey">_NS:463</string>
 								</object>
@@ -570,7 +582,7 @@
 							</object>
 							<object class="NSTabViewItem" id="632028138">
 								<object class="NSView" key="NSView" id="860823588">
-									<reference key="NSNextResponder" ref="1061572892"/>
+									<nil key="NSNextResponder"/>
 									<int key="NSvFlags">256</int>
 									<object class="NSMutableArray" key="NSSubviews">
 										<bool key="EncodedWithXMLCoder">YES</bool>
@@ -589,7 +601,6 @@
 															<int key="NSvFlags">4352</int>
 															<string key="NSFrameSize">{346, 133}</string>
 															<reference key="NSSuperview" ref="812601610"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="367522340"/>
 															<string key="NSReuseIdentifierKey">_NS:1197</string>
 															<bool key="NSEnabled">YES</bool>
@@ -649,7 +660,6 @@
 													</object>
 													<string key="NSFrame">{{1, 1}, {346, 133}}</string>
 													<reference key="NSSuperview" ref="658883870"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="382481933"/>
 													<string key="NSReuseIdentifierKey">_NS:1195</string>
 													<reference key="NSDocView" ref="382481933"/>
@@ -661,7 +671,6 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 													<reference key="NSSuperview" ref="658883870"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="280168574"/>
 													<string key="NSReuseIdentifierKey">_NS:1214</string>
 													<reference key="NSTarget" ref="658883870"/>
@@ -673,7 +682,6 @@
 													<int key="NSvFlags">-2147483392</int>
 													<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 													<reference key="NSSuperview" ref="658883870"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="598558705"/>
 													<string key="NSReuseIdentifierKey">_NS:1216</string>
 													<int key="NSsFlags">1</int>
@@ -684,7 +692,6 @@
 											</object>
 											<string key="NSFrame">{{17, 42}, {348, 135}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="812601610"/>
 											<string key="NSReuseIdentifierKey">_NS:1193</string>
 											<int key="NSsFlags">133682</int>
@@ -698,7 +705,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{14, 185}, {297, 17}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="658883870"/>
 											<string key="NSReuseIdentifierKey">_NS:3936</string>
 											<bool key="NSEnabled">YES</bool>
@@ -718,7 +724,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{17, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="939772210"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
@@ -743,7 +748,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{52, 16}, {31, 23}}</string>
 											<reference key="NSSuperview" ref="860823588"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="1061572892"/>
 											<string key="NSReuseIdentifierKey">_NS:1566</string>
 											<bool key="NSEnabled">YES</bool>
@@ -765,8 +769,6 @@
 										</object>
 									</object>
 									<string key="NSFrame">{{10, 33}, {382, 207}}</string>
-									<reference key="NSSuperview" ref="1061572892"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="838595240"/>
 								</object>
 								<string key="NSLabel">Ignore List</string>
@@ -774,14 +776,14 @@
 								<reference key="NSTabView" ref="1061572892"/>
 							</object>
 						</object>
-						<reference key="NSSelectedTabViewItem" ref="632028138"/>
+						<reference key="NSSelectedTabViewItem" ref="99429700"/>
 						<reference key="NSFont" ref="169077990"/>
 						<int key="NSTvFlags">0</int>
 						<bool key="NSAllowTruncatedLabels">YES</bool>
 						<bool key="NSDrawsBackground">YES</bool>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="860823588"/>
+							<reference ref="723364279"/>
 						</object>
 					</object>
 				</object>
@@ -951,7 +953,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">accountUseButton</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="288603235"/>
+						<reference key="destination" ref="826891380"/>
 					</object>
 					<int key="connectionID">154</int>
 				</object>
@@ -959,7 +961,7 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">useAccount:</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="288603235"/>
+						<reference key="destination" ref="826891380"/>
 					</object>
 					<int key="connectionID">155</int>
 				</object>
@@ -1050,7 +1052,7 @@
 							<reference ref="823410735"/>
 							<reference ref="848324219"/>
 							<reference ref="830779526"/>
-							<reference ref="288603235"/>
+							<reference ref="826891380"/>
 						</object>
 						<reference key="parent" ref="99429700"/>
 					</object>
@@ -1350,17 +1352,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">152</int>
-						<reference key="object" ref="288603235"/>
+						<reference key="object" ref="826891380"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="292638769"/>
+							<reference ref="481800347"/>
 						</object>
 						<reference key="parent" ref="723364279"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">153</int>
-						<reference key="object" ref="292638769"/>
-						<reference key="parent" ref="288603235"/>
+						<reference key="object" ref="481800347"/>
+						<reference key="parent" ref="826891380"/>
 					</object>
 				</object>
 			</object>
@@ -1400,6 +1402,7 @@
 					<string>151.IBPluginDependency</string>
 					<string>152.IBPluginDependency</string>
 					<string>153.IBPluginDependency</string>
+					<string>50.IBAttributePlaceholdersKey</string>
 					<string>50.IBPluginDependency</string>
 					<string>51.IBPluginDependency</string>
 					<string>52.IBPluginDependency</string>
@@ -1454,6 +1457,14 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<object class="NSMutableDictionary">
+						<string key="NS.key.0">InitialTabViewItem</string>
+						<object class="IBInitialTabViewItemAttribute" key="NS.object.0">
+							<string key="name">InitialTabViewItem</string>
+							<reference key="object" ref="1061572892"/>
+							<reference key="initialTabViewItem" ref="99429700"/>
+						</object>
+					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1487,7 +1498,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">155</int>
+			<int key="maxID">156</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1573,6 +1584,7 @@
 							<string>buddyRemoveButton</string>
 							<string>ignoreList</string>
 							<string>ignoreRemoveButton</string>
+							<string>tabView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1583,6 +1595,7 @@
 							<string>NSButton</string>
 							<string>NSTableView</string>
 							<string>NSButton</string>
+							<string>NSTabView</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -1596,6 +1609,7 @@
 							<string>buddyRemoveButton</string>
 							<string>ignoreList</string>
 							<string>ignoreRemoveButton</string>
+							<string>tabView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1626,6 +1640,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">ignoreRemoveButton</string>
 								<string key="candidateClassName">NSButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">tabView</string>
+								<string key="candidateClassName">NSTabView</string>
 							</object>
 						</object>
 					</object>
