--- a/HotdAmn/en.lproj/Themes/Default.css
+++ b/HotdAmn/en.lproj/Themes/Default.css
@@ -3,10 +3,34 @@
 	padding: 0;
 }
 
+body {
+	padding: 5px;
+	font-family: Courier New;
+}
+
+#topic {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	padding: 0.3em;
+	height: 1.2em;
+	background: black;
+	color: white;
+}
+
+ul {
+	padding-top: 1.8em;
+}
+
 username:before {
 	content: "<";
 }
 
 username:after {
 	content: ">";
+}
+
+li:nth-child(odd) {
+	background: #f4f4f4;
 }
