--- a/HotdAmn/en.lproj/Themes/Default.css
+++ b/HotdAmn/en.lproj/Themes/Default.css
@@ -14,7 +14,8 @@ body {
 	top: 0;
 	left: 0;
 	padding: 0.3em;
-	height: 1.2em;
+	max-height: 1.2em;
+	overflow: scroll;
 	background: black;
 	color: white;
 }
