--- a/HotdAmn/Interface/ChatView.xib
+++ b/HotdAmn/Interface/ChatView.xib
@@ -356,7 +356,6 @@
 												<string key="NSFrame">{{1, 383.93999147415161}, {147.98101425170898, 15}}</string>
 												<reference key="NSSuperview" ref="1026595967"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView"/>
 												<string key="NSReuseIdentifierKey">_NS:317</string>
 												<int key="NSsFlags">1</int>
 												<reference key="NSTarget" ref="1026595967"/>
@@ -474,6 +473,14 @@
 						<reference key="destination" ref="233088988"/>
 					</object>
 					<int key="connectionID">103</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">policyDelegate</string>
+						<reference key="source" ref="233088988"/>
+						<reference key="destination" ref="1001"/>
+					</object>
+					<int key="connectionID">104</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -696,7 +703,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">103</int>
+			<int key="maxID">104</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
